--- a/12. Machine Learning for Genomics.ipynb
+++ b/12. Machine Learning for Genomics.ipynb
@@ -49,7 +49,9 @@
     "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
     "from plotly.graph_objs import *\n",
     "\n",
-    "init_notebook_mode(connected=True)"
+    "init_notebook_mode(connected=True)\n",
+    "\n",
+    "import Modules_tools"
    ]
   },
   {
@@ -68,124 +70,7 @@
     "\n",
     "\n",
     "\n",
-    "_We begin by defining some functions_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def return_fsts2(freq_array):\n",
-    "    pops= range(freq_array.shape[0])\n",
-    "    H= {pop: [1-(freq_array[pop,x]**2 + (1 - freq_array[pop,x])**2) for x in range(freq_array.shape[1])] for pop in range(freq_array.shape[0])}\n",
-    "    Store= []\n",
-    "\n",
-    "    for comb in it.combinations(H.keys(),2):\n",
-    "        P= [sum([freq_array[x,i] for x in comb]) / len(comb) for i in range(freq_array.shape[1])]\n",
-    "        HT= [2 * P[x] * (1 - P[x]) for x in range(len(P))]\n",
-    "        per_locus_fst= [[(HT[x] - np.mean([H[p][x] for p in comb])) / HT[x],0][int(HT[x] == 0)] for x in range(len(P))]\n",
-    "        per_locus_fst= np.nan_to_num(per_locus_fst)\n",
-    "        Fst= np.mean(per_locus_fst)\n",
-    "\n",
-    "        Store.append([comb,Fst])\n",
-    "        \n",
-    "    return pd.DataFrame(Store,columns= ['pops','fst'])\n",
-    "\n",
-    "\n",
-    "def local_sampling_correct(data_now,n_comp):\n",
-    "    pca = PCA(n_components=n_comp, whiten=False,svd_solver='randomized').fit(data_now)\n",
-    "    feats= pca.transform(data_now)\n",
-    "    \n",
-    "    N= 50\n",
-    "    bandwidth = estimate_bandwidth(feats, quantile=0.15)\n",
-    "    params = {'bandwidth': np.linspace(np.min(feats), np.max(feats),30)}\n",
-    "    grid = GridSearchCV(KernelDensity(algorithm = \"ball_tree\",breadth_first = False), params,verbose=0)\n",
-    "    \n",
-    "    ## perform MeanShift clustering.\n",
-    "    ms = MeanShift(bandwidth=bandwidth, bin_seeding=False, cluster_all=False, min_bin_freq=5)\n",
-    "    ms.fit(feats)\n",
-    "    labels1 = ms.labels_\n",
-    "    label_select = {y:[x for x in range(len(labels1)) if labels1[x] == y] for y in sorted(list(set(labels1))) if y != -1}\n",
-    "\n",
-    "    ## Extract the KDE of each cluster identified by MS.\n",
-    "    Proxy_data= []\n",
-    "\n",
-    "    for lab in label_select.keys():\n",
-    "        if len(label_select[lab]) < 3:\n",
-    "            continue\n",
-    "            \n",
-    "        Quanted_set= feats[label_select[lab],:]\n",
-    "        grid.fit(Quanted_set)\n",
-    "\n",
-    "        kde = grid.best_estimator_\n",
-    "        Extract= kde.sample(N)\n",
-    "        Return= pca.inverse_transform(Extract)\n",
-    "        \n",
-    "        Proxy_data.extend(Return)\n",
-    "    \n",
-    "    Proxy_data= np.array(Proxy_data)\n",
-    "    \n",
-    "    print([len(x) for x in label_select.values()])\n",
-    "    pca2 = PCA(n_components=n_comp, whiten=False,svd_solver='randomized').fit(Proxy_data)\n",
-    "    var_comp= pca2.explained_variance_ratio_\n",
-    "    \n",
-    "    New_features= pca2.transform(data_now)# * var_comp\n",
-    "    return New_features, var_comp\n",
-    "\n",
-    "\n",
-    "##### fun with real data \n",
-    "# load data\n",
-    "\n",
-    "\n",
-    "def read_refs(index_file):\n",
-    "    indxs = recursively_default_dict()\n",
-    "    \n",
-    "    Input = open(index_file,'r')\n",
-    "    for line in Input:\n",
-    "        line = line.split()\n",
-    "        indxs[int(line[0])][line[1]] = []\n",
-    "    \n",
-    "    Input.close()\n",
-    "    \n",
-    "    indxs = {gop:[x for x in indxs[gop].keys()] for gop in indxs.keys()}\n",
-    "    \n",
-    "    return indxs, [x for x in sorted(indxs.keys())]\n",
-    "\n",
-    "\n",
-    "\n",
-    "def read_Darwin(darwin_file):\n",
-    "    d= 0\n",
-    "    Input= open(darwin_file,'r')\n",
-    "    Names= []\n",
-    "    gen= []\n",
-    "    for line in Input:\n",
-    "        line= line.rstrip().split('\\t')\n",
-    "        \n",
-    "        if d== 0:\n",
-    "            d+= 1\n",
-    "            Nsnps= max([int(x) for x in line[1:]])\n",
-    "            continue\n",
-    "\n",
-    "        art= line[1:]\n",
-    "        art= [[x,'0'][int(x == ' ')] for x in art]\n",
-    "\n",
-    "        Names.append(line[0])\n",
-    "\n",
-    "        art= [int(x) for x in art]\n",
-    "        #art= [[x,np.nan][int(x == 9)] for x in art]\n",
-    "        \n",
-    "        if len(art) < Nsnps:\n",
-    "                        art.extend([0] * (Nsnps - len(art)))\n",
-    "        \n",
-    "        art= [x / 2 for x in art]\n",
-    "        gen.append(art)\n",
-    "        d += 1\n",
-    "    Input.close()\n",
-    "    \n",
-    "    \n",
-    "    return gen, Names\n"
+    "_see Modules_tools.py Loda data functions and local sampling correction_"
    ]
   },
   {
